  * Add NCR53c406a to alpha/scsi-modules.
  * Remove drivers/scsi/pcmcia directory from alpha/scsi-modules for now.
  * Add (empty) kernel-image files to the modules lists directories.
    Removes some special cases..
  * Elide dependencies from package-lists if the depended-upon package
    will not be built for the target arch.
  * Update docs, but they're still just a brain-dump.

 -- Joey Hess <joeyh@debian.org>  Fri, 24 Oct 2003 16:13:06 -0400

linux-kernel-di (0.7) unstable; urgency=low

  * Add duplicate module finding script.
  * Remove duplicate module sis900 from nic-extra-modules.
  * Both nic-modules and nic-extra-modules need isa-pnp-modules.
  * scsi-modules needs parport-modules.
  * Changed many modules to priority standard, to ensure they are available
    automatically during eg, CDROM installs.
  * Rewrote modules.dep parser in perl, make it work even if modules.dep
    has been relocated.
  * Add MODDIR which allows overridding of the directory it takes modules
    from.
  * Don't pass version into copy-modules via exported env variable, move it
    to $2.
  * Doc updates.

 -- Joey Hess <joeyh@debian.org>  Fri, 17 Oct 2003 20:37:00 -0400

linux-kernel-di (0.6) unstable; urgency=low

  * The isapnp-modules dep moved from nic-modules to nic-extra-modules.
  * Simplified the rules file some more.

 -- Joey Hess <joeyh@debian.org>  Fri, 17 Oct 2003 00:51:54 -0400

linux-kernel-di (0.5) unstable; urgency=low

  * Remove scsi_debug modules from scsi-modules.
  * Broke out some uncommon SCSI modules (for tape, raid, pcmcia scsi, etc)
    to a scsi-extra-modules. Should not be needed to get to a cdrom.
  * Move copy-modules down a directory.
  * Add a README.

 -- Joey Hess <joeyh@debian.org>  Thu, 16 Oct 2003 00:46:57 -0400

linux-kernel-di (0.4) unstable; urgency=low

  * Add firewire-core-modules, for firewire CDROMs, disks.

 -- Joey Hess <joeyh@debian.org>  Wed, 15 Oct 2003 20:08:48 -0400

linux-kernel-di (0.3) unstable; urgency=low
