@@ -33,12 +33,12 @@ multiple udebs, the find-dups program is used to scan for duplicates of
 modules. When you have duplicates, you need to find (or make) a package
 that both packages depend on, and move the duplicate modules to it.
 
-MODDIR can be set to a directory containing a tree of kernel modules, and
-it will be used instead of the usual tree /lib/modules/<kernel-version>.
-That directory will need to have a modules.dep file already generated for
-this to work though -- but the modules.dep can even be copied from another
-system and it'll work. This can be useful if you cannot install the
-required kernel-image package, or are cross-compiling.
+SOURCEDIR can be set to a directory containing a tree of kernel modules and
+kernel image, and it will be used instead of the usual tree. That directory
+will need to have a modules.dep file already generated for this to work
+though -- but the modules.dep can even be copied from another system and
+it'll work. This can be useful if you cannot install the required
+kernel-image package, or are cross-compiling.
 
 [1] Since CVS doesn't do symlinks, files named .lnk can contain the
     text of the symlink, they are turned into symlinks at build time, and
